deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authservicedp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: lliivvss/authservice:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: authservicesvc
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: authservice
  type: ClusterIP
  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: \"false\" # It is used since we are not specifying a host. 
     #When no host is specified, then the default-server is hit, 
     #which is configured with a self-signed certificate, and redirects http to https
     #nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /api/(.*) /$1 break;
spec:
  rules:
   - http:
      paths:
       - path: /api/
         backend:
          serviceName: authservicesvc
          servicePort: 80
